--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "element-ui": "^2.0.11",
+    "highlight.js": "^9.12.0",
     "vue": "^2.5.2",
+    "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
