--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,11 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-runtime",
+    "transform-vue-jsx"
+  ],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
